- Added Special Characters to Custom Scale and Room Name - Fixed a UI bug that caused the app bar to squish buttons

--- a/StoryPointEstimatorBlazorApp/wwwroot/css/site.css
+++ b/StoryPointEstimatorBlazorApp/wwwroot/css/site.css
@@ -1,17 +1,3 @@
-.drawer {
-    background-color: #4B27FE;
-    font-family: 'Ubuntu', sans-serif;
-    color: white;
-    font-size: 36px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.drawer:hover {
-    color: #75A9FC;
-}
-
 .appbar {
     font-size: 24px;
     font-family: 'Ubuntu', sans-serif;
@@ -40,7 +26,7 @@
 .mainContainer {
     display: flex;
     margin-top: 1%;
-    justify-content: space-between;
+    justify-content: start;
 }
 
 .tool-buttons-container {
